# gurupod

./: .gitignore  .pre-commit-config.yaml  README.md  classes.py  docker-compose.yml  dockerfile  episodes.json  gunicorn_start  guru_funcs.py  guru_funcs_2.py  index.html  main.py  notes.txt  pyproject.toml  requirements.txt
DTG/DTG/: settings.py  wsgi.py
DTG/GuruApp/: admin.py  convertjson.py  forms.py  models.py  views.py
bk/: episodes.html  episodes.json
data/: consts.py  db_backup.2023-12-27.good..json  db_backup.json  episodes.json  episodes.txt  episodes_mod.json  guru.db  gurunames.py  json_converter.py
data/backup/: db_backup.json
django_tg/DTG/: asgi.py  urls.py
django_tg/GuruApp/: urls.py
gp1/: classes.py  guru_funcs.py  guru_funcs_2.py
gurupedia/DTG/: settings.py  urls.py
gurupedia/fastguru/: fastguru.py  fastmodel.py
gurupedia/gurupod/: forms.py  models.py  widgets.py
gurupedia/static/templates/: base.html
legacy/: episode_old.py  writer_oop.py
legacy/djanguru/: manage.py
legacy/djanguru/guru_app/: api.py
legacy/writer_funcs_leg/: html_writer.py  reddit_writer.py  wiki_writer.py  writer_funcs.py
server/: docker-compose.yml  dockerfile  gunicorn_start
server/nginx/: default.conf  default.conf.bak
src/: asyncplay.py  episode_monitor.py  hero.py  initialise.py  main.py  play.py  tejj.py
src/data/: consts.py  dld.py  episodes.md  episodes2.json  episodes_mod.json  gurunames.py  jhsdf.py  json_converter.py
src/gurupedia/: db.sqlite3
src/gurupedia/DTG/: asgi.py
src/gurupedia/gurupod/: api.py  apps.py  models.py  old_logic.py  urls.py  views.py
src/gurupod/: __init__.py  backup_bot.py  bot.py  consts.py  database.py  disptaching.py  epi_as.py  episode.py  episode_fetch.py  episode_scraper.py  episodes.py  gurulog.py  leg_classes.py  main.py  markup_html.py  markup_reddit.py  markup_writer.py  red2.py  reddit.py  routes.py  scrape.py  scrape_old.py  scraper_oop.py  shared.py  soup_expander.py  srdgsrghs.py  user_db.py  writer.py
src/gurupod/backup_restore/: backup_bot.py  config_default.toml  config_local.toml  config_remote.toml  default_config.toml  guru_names.toml  json_converter.py  prune.py  pruner.py
src/gurupod/backup_restore_old/: backup_bot.py  guru_names.txt  pruner.py
src/gurupod/core/: .env.example  backup_bot.py  config.py  config_default.toml  consts.py  database.py  default_config.toml  gurulog.py  gurulogging.py  logger_config.py  logger_funcs.py  prune_backup.sh  routes.py  test_prune.sh  types.py
src/gurupod/data/: back.py  consts.py  dld.py  episodes.html  episodes.json  episodes.md  smth.md
src/gurupod/djanguru/: db.sqlite3
tests/: conftest.py  main_test.py  test_backup.py  test_bot.py  test_log.py  test_markup.py  test_reddit.py  test_routes.py  test_writer.py
(+120 files in other folders)
