[project]
name = "gurupod"
version = "0.1.0"
description = "Decoding The Guru Podcast wiki generator"
authors = [
    { name = "pawrequest", email = "paw@pawrequest.com" }
]
dependencies = [
    'sqlmodel',
    "uvicorn>=0.24.0.post1",
    'fastapi',
    'pydantic',
    'python-dotenv',
    "beautifulsoup4",
    "python-dateutil",
    "aiohttp",
    "asyncpraw",
    "loguru",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-asyncio",
    "httpx",
    "pytest",
    "coverage>=7.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true
