[project]
name = "gurupod"
version = "0.1.0"
description = "Decoding The Guru Podcast wiki generator"
authors = [
    { name = "pawrequest", email = "paw@pawrequest.com" }
]
dependencies = [
    'sqlmodel',
    "uvicorn>=0.24.0.post1",
    'fastapi',
    'pydantic',
    'python-dotenv',
    "beautifulsoup4",
    "python-dateutil",
    "aiohttp",
    "asyncpraw",
    "loguru",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-asyncio",
    "httpx",
    "pytest",
    "coverage>=7.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

ignore = [
    "F841", # local variable assigned but never used
    "F401", # imported but unused
]
